cmake_minimum_required(VERSION 3.0.0)
project(Cpp_Basics VERSION 0.1.0)

add_executable(Cpp_Basics main.cpp 
                        "01 - CppBasics.cpp"
                        # "02 - CppOperators.cpp"
                        # Cpp03-Statements.cpp
                        # Cpp04-Functions.cpp
                        # Cpp05-Strings.cpp
                        # Cpp06-Classes.cpp
                        # Cpp07-Exceptions.cpp
                        # Cpp08-DataContainers.cpp
                        # Cpp09-Files.cpp
              )

add_executable(Cpp_Start "00 - CppStart.cpp")

